--- a/index.html
+++ b/index.html
@@ -293,6 +293,10 @@ font-size:12px;
     <div style="font-family:'JetBrains Mono'; font-size:14px;line-height:1.8;color:#cbd5e1;">
         I am <b style="color:var(--neon-blue);">Atharv Dixit</b>, a 15-year-old student from India. 
         Dixit Labs is my personal "Area 51"— a place where I experiment with web tech.
+             PLAY//FACTS//FUN//FOCUS is my motto. 
+        I literally try disrupting internet before my next exam. Hardcorely watching cricket and detailed cricket analyst.
+        Tense Hamstrings is my passion. My relatives are advised to buy me a ko-fi
+        IF_A_BUG_CREEPS_IN_IT_IS_A_UNDOCUMENTED_FEATURE_NOT_A_BUG. 
     </div>
 </section>
 
@@ -381,3 +385,4 @@ function filterSelection(cat,el){
 
 </body>
 </html>
+
