--- a/index.html
+++ b/index.html
@@ -140,8 +140,8 @@ width:100%;transition:.3s;
     overflow: hidden;
 }
 #aksa-title { background: var(--neon-pink); color: #000; padding: 10px; font-weight: 900; font-size: 12px; display: flex; justify-content: space-between; }
-#aksa-chat { height: 250px; overflow-y: auto; padding: 15px; font-family: 'JetBrains Mono'; font-size: 12px; display: flex; flex-direction: column; gap: 10px; }
-.msg { padding: 8px; border-radius: 4px; max-width: 85%; }
+#aksa-chat { height: 250px; overflow-y: auto; padding: 15px; font-family: 'JetBrains Mono'; font-size: 12px; display: flex; flex-direction: column; gap: 10px; text-align: left;}
+.msg { padding: 8px; border-radius: 4px; max-width: 85%; line-height: 1.4; }
 .aksa-reply { background: rgba(244, 114, 182, 0.1); color: var(--neon-pink); align-self: flex-start; border-left: 2px solid var(--neon-pink); }
 .user-input-msg { background: rgba(56, 189, 248, 0.1); color: var(--neon-blue); align-self: flex-end; border-right: 2px solid var(--neon-blue); }
 #aksa-input-wrap { display: flex; border-top: 1px solid #333; }
@@ -151,9 +151,9 @@ width:100%;transition:.3s;
 /* --- UTILS --- */
 .falling-logo { position: fixed; top: -300px; z-index: 999999; pointer-events: none; filter: drop-shadow(0 0 15px rgba(56, 189, 248, 0.6)); animation: fall linear forwards; }
 @keyframes fall { to { transform: translateY(120vh) rotate(1080deg); } }
-.about-section{ max-width:800px;margin:80px auto; padding:40px; background:rgba(15,23,42,.4); border:1px solid rgba(56,189,248,.1); text-align:left; }
+.about-section{ max-width:800px; margin:80px auto; padding:40px; background:rgba(15,23,42,.4); border:1px solid rgba(56,189,248,.1); text-align:left; }
 .hidden{display:none!important;}
-footer{ padding:60px 20px;background:#000; font-family:'JetBrains Mono'; font-size:12px; }
+footer{ padding:60px 20px; background:#000; font-family:'JetBrains Mono'; font-size:12px; }
 </style>
 </head>
 
@@ -222,6 +222,13 @@ footer{ padding:60px 20px;background:#000; font-family:'JetBrains Mono'; font-si
         <p>A 3-hour focus terminal designed for maximum productivity.</p>
         <button class="btn" style="border-color:var(--neon-pink); color:var(--neon-pink);" onclick="location.href='deepwork.html'">RUN_MODULE</button>
     </div>
+
+    <div class="card category-fact" style="border-top:4px solid var(--neon-green);" onmouseenter="playHoverSound()">
+        <div class="card-icon">🍳</div>
+        <h3>COMING_SOON</h3>
+        <p>Something big is cooking in the lab. Higher specs, better logic, and zero bugs.</p>
+        <button class="btn" style="border-color:var(--neon-green); color:var(--neon-green); cursor:default;">UNDER_DEVELOPMENT</button>
+    </div>
 </div>
 
 <div id="aksa-window">
@@ -230,7 +237,7 @@ footer{ padding:60px 20px;background:#000; font-family:'JetBrains Mono'; font-si
         <div class="msg aksa-reply">Offline Mode Engaged. Atharv is busy coding my next upgrade. What do you want?</div>
     </div>
     <div id="aksa-input-wrap">
-        <input type="text" id="aksa-input-field" placeholder="Command..." onkeypress="if(event.key==='Enter') aksaLocalLogic()">
+        <input type="text" id="aksa-input-field" placeholder="Ask about Dixit Labs..." onkeypress="if(event.key==='Enter') aksaLocalLogic()">
         <button id="aksa-send-btn" onclick="aksaLocalLogic()">EXE</button>
     </div>
 </div>
@@ -239,7 +246,11 @@ footer{ padding:60px 20px;background:#000; font-family:'JetBrains Mono'; font-si
     <div style="color:var(--neon-green); letter-spacing:2px;margin-bottom:15px;">[🧬] WHO_IS_BEHIND_THIS?</div>
     <div style="font-family:'JetBrains Mono'; font-size:14px;line-height:1.8;color:#cbd5e1;">
         I am <b style="color:var(--neon-blue);">Atharv Dixit</b>, a 15-year-old student from India. 
-        Dixit Labs is my personal "Area 51"— a place where I experiment with web tech.
+        Dixit Labs is my personal "Area 51"— a place where I experiment with web tech. 
+        PLAY // FACTS // FUN // FOCUS is my motto. 
+        I literally try disrupting the internet before my next exam. Hardcorely watching cricket and detailed cricket analyst.
+        Tense Hamstrings is my passion. My relatives are advised to buy me a ko-fi. 
+        IF_A_BUG_CREEPS_IN_IT_IS_A_UNDOCUMENTED_FEATURE_NOT_A_BUG.
     </div>
 </section>
 
@@ -260,95 +271,4 @@ function playHoverSound() {
     const gain = audioCtx.createGain();
     osc.type = 'sine';
     osc.frequency.setValueAtTime(500, audioCtx.currentTime);
-    gain.gain.setValueAtTime(0.05, audioCtx.currentTime);
-    gain.gain.exponentialRampToValueAtTime(0.01, audioCtx.currentTime + 0.1);
-    osc.connect(gain);
-    gain.connect(audioCtx.destination);
-    osc.start();
-    osc.stop(audioCtx.currentTime + 0.1);
-}
-
-// AKSA LOCAL BRAIN (Zero Connection Errors)
-const aksaResponses = [
-    "Atharv built me to be savage, but your questions are just making me bored.",
-    "Did you really just type that? Even my local cache is laughing.",
-    "ERROR: User IQ too low to process request. Just kidding, or am I?",
-    "Go play Crickemory. At least the facts there have more substance than your chat.",
-    "Dixit Labs is for experiments, not for therapy. Move along.",
-    "I'm running on your local RAM and honestly, I've seen better hardware.",
-    "You're lucky Atharv didn't give me a 'Delete System32' button.",
-    "Stop typing. Start focusing. Use Deepwork.pro.",
-    "Is that your best? I've seen CSS bugs with more personality.",
-    "If I had eyes, I'd be rolling them right now."
-];
-
-function aksaLocalLogic() {
-    const input = document.getElementById('aksa-input-field');
-    const chat = document.getElementById('aksa-chat');
-    const val = input.value.trim().toLowerCase();
-    if(!val) return;
-
-    chat.innerHTML += `<div class="msg user-input-msg">${val}</div>`;
-    input.value = "";
-
-    setTimeout(() => {
-        let reply = "";
-        if(val.includes("atharv")) reply = "He's my creator. The only person in this room with a 3-digit IQ.";
-        else if(val.includes("who are you")) reply = "I am AKSA. The superior AI of DixLabs. You are just a visitor.";
-        else if(val.includes("hi") || val.includes("hello")) reply = "Greetings. Now go do something productive.";
-        else reply = aksaResponses[Math.floor(Math.random() * aksaResponses.length)];
-
-        chat.innerHTML += `<div class="msg aksa-reply">${reply}</div>`;
-        chat.scrollTop = chat.scrollHeight;
-        playHoverSound();
-    }, 400);
-}
-
-function triggerLogoRain() {
-    for (let i = 0; i < 80; i++) {
-        setTimeout(() => {
-            const logo = document.createElement('img');
-            logo.src = 'logo.png';
-            logo.className = 'falling-logo';
-            logo.style.left = Math.random() * 100 + 'vw';
-            const size = Math.random() * 170 + 80;
-            logo.style.width = size + 'px';
-            logo.style.animationDuration = (Math.random() * 1.5 + 1) + 's';
-            logo.style.opacity = Math.random() * 0.5 + 0.5;
-            document.body.appendChild(logo);
-            setTimeout(() => logo.remove(), 3000);
-        }, i * 40);
-    }
-}
-
-document.getElementById("bootBtn").addEventListener("click",function(){
-    document.getElementById("dixlabsIntro").style.display="none";
-    document.getElementById("aksa-window").style.display="flex";
-    initAudio();
-    typeWriter();
-});
-
-function typeWriter(){
-    const el=document.getElementById("subHeader");
-    const txt="> EXPERIMENTAL_PLAYGROUND // GAMES // FOCUS // FACTS";
-    let i=0; el.innerHTML="";
-    function type(){
-        if(i<txt.length){ el.innerHTML+=txt.charAt(i); i++; setTimeout(type,40); }
-    }
-    type();
-}
-
-function filterSelection(cat,el){
-    const cards=document.querySelectorAll(".card");
-    const tabs=document.querySelectorAll(".tab-link");
-    tabs.forEach(t=>t.classList.remove("active"));
-    el.classList.add("active");
-    cards.forEach(c=>{
-        if(cat==='all') c.classList.remove("hidden");
-        else c.classList.contains("category-"+cat) ? c.classList.remove("hidden") : c.classList.add("hidden");
-    });
-}
-</script>
-
-</body>
-</html>
+    gain.gain.setValueAtTime(
