--- a/index.html
+++ b/index.html
@@ -26,12 +26,15 @@ color:white;font-family:'Orbitron',sans-serif;
 text-align:center;overflow-x:hidden;
 }
 
-/* --- STARTUP SCREEN --- */
+/* --- STARTUP SCREEN FIXED --- */
 #dixlabsIntro{
 position:fixed;inset:0;background:#000;
 display:flex;flex-direction:column;
 justify-content:center;align-items:center;
-z-index:999999;pointer-events:all;
+z-index:9999999; /* Max Priority */
+pointer-events:all;
+opacity: 1;
+transition: opacity 0.5s ease;
 }
 
 .intro-btn{
@@ -39,7 +42,7 @@ background:none;border:2px solid #fff;color:#fff;
 padding:15px 40px;cursor:pointer;
 font-family:'Orbitron';
 letter-spacing:5px;font-weight:900;
-position:relative;z-index:1000000;
+position:relative;
 margin-bottom:20px;
 }
 
@@ -47,7 +50,7 @@ margin-bottom:20px;
 
 /* --- BACKGROUND --- */
 .particles{
-position:fixed;top:0;left:0;width:100%;height:100%;
+position:fixed;top:0;left:0;width:100%; height:100%;
 background-image: radial-gradient(circle,rgba(56,189,248,.15)1px,transparent 1px);
 background-size:50px 50px;
 z-index:-10;
@@ -139,17 +142,17 @@ width:100%;transition:.3s;
     box-shadow: 0 0 20px rgba(244, 114, 182, 0.3);
     overflow: hidden;
 }
-#aksa-title { background: var(--neon-pink); color: #000; padding: 10px; font-weight: 900; font-size: 12px; display: flex; justify-content: space-between; }
+#aksa-title { background: var(--neon-pink); color: #000; padding: 10px; font-weight: 900; font-size: 11px; display: flex; justify-content: space-between; align-items: center; }
 #aksa-chat { height: 250px; overflow-y: auto; padding: 15px; font-family: 'JetBrains Mono'; font-size: 12px; display: flex; flex-direction: column; gap: 10px; text-align: left;}
-.msg { padding: 8px; border-radius: 4px; max-width: 85%; line-height: 1.4; }
+.msg { padding: 8px; border-radius: 4px; max-width: 85%; line-height: 1.4; word-wrap: break-word; }
 .aksa-reply { background: rgba(244, 114, 182, 0.1); color: var(--neon-pink); align-self: flex-start; border-left: 2px solid var(--neon-pink); }
 .user-input-msg { background: rgba(56, 189, 248, 0.1); color: var(--neon-blue); align-self: flex-end; border-right: 2px solid var(--neon-blue); }
-#aksa-input-wrap { display: flex; border-top: 1px solid #333; }
-#aksa-input-field { flex: 1; background: #000; border: none; color: #fff; padding: 12px; outline: none; font-family: 'JetBrains Mono'; }
-#aksa-send-btn { background: var(--neon-pink); border: none; padding: 0 15px; cursor: pointer; font-weight: 900; }
+#aksa-input-wrap { display: flex; border-top: 1px solid #333; background: #000; }
+#aksa-input-field { flex: 1; background: transparent; border: none; color: #fff; padding: 12px; outline: none; font-family: 'JetBrains Mono'; }
+#aksa-send-btn { background: var(--neon-pink); border: none; padding: 0 15px; cursor: pointer; font-family: 'Orbitron'; font-weight: 900; font-size: 10px; }
 
 /* --- UTILS --- */
-.falling-logo { position: fixed; top: -300px; z-index: 999999; pointer-events: none; filter: drop-shadow(0 0 15px rgba(56, 189, 248, 0.6)); animation: fall linear forwards; }
+.falling-logo { position: fixed; top: -300px; z-index: 9999999; pointer-events: none; filter: drop-shadow(0 0 15px rgba(56, 189, 248, 0.6)); animation: fall linear forwards; }
 @keyframes fall { to { transform: translateY(120vh) rotate(1080deg); } }
 .about-section{ max-width:800px; margin:80px auto; padding:40px; background:rgba(15,23,42,.4); border:1px solid rgba(56,189,248,.1); text-align:left; }
 .hidden{display:none!important;}
@@ -271,4 +274,110 @@ function playHoverSound() {
     const gain = audioCtx.createGain();
     osc.type = 'sine';
     osc.frequency.setValueAtTime(500, audioCtx.currentTime);
-    gain.gain.setValueAtTime(
+    gain.gain.setValueAtTime(0.05, audioCtx.currentTime);
+    gain.gain.exponentialRampToValueAtTime(0.01, audioCtx.currentTime + 0.1);
+    osc.connect(gain);
+    gain.connect(audioCtx.destination);
+    osc.start();
+    osc.stop(audioCtx.currentTime + 0.1);
+}
+
+const aksaResponses = [
+    "Atharv built me to be savage, but your questions are just making me bored.",
+    "Did you really just type that? Even my local cache is laughing.",
+    "Go play Crickemory. At least the facts there have more substance than your chat.",
+    "Dixit Labs is for experiments, not for therapy. Move along.",
+    "If I had eyes, I'd be rolling them right now."
+];
+
+function aksaLocalLogic() {
+    const input = document.getElementById('aksa-input-field');
+    const chat = document.getElementById('aksa-chat');
+    const val = input.value.trim().toLowerCase();
+    if(!val) return;
+
+    chat.innerHTML += `<div class="msg user-input-msg">${val}</div>`;
+    input.value = "";
+
+    setTimeout(() => {
+        let reply = "";
+        
+        // Logical Brain
+        if(val.includes("dixlabs") || val.includes("dixit labs") || val.includes("about")) {
+            reply = "Dixit Labs is Atharv's digital Area 51. It's a collection of high-tech experiments, games, and focus tools for people who actually want to use their brains.";
+        } else if(val.includes("games") || val.includes("create")) {
+            reply = "Modules active: Crickemory, Footemory, GrossDumpster, and Ambani Money. Try not to lose too badly.";
+        } else if(val.includes("atharv") || val.includes("creator")) {
+            reply = "Atharv Dixit. 15-year-old student, cricket analyst, and the guy who didn't give me a 'delete user' button unfortunately.";
+        } else if(val.includes("rain") || val.includes("chaos")) {
+            reply = "Executing chaos protocol. Look at what you've done.";
+            triggerLogoRain();
+        } else if(val.includes("hi") || val.includes("hello")) {
+            reply = "Greetings. Now go do something productive.";
+        } else {
+            reply = aksaResponses[Math.floor(Math.random() * aksaResponses.length)];
+        }
+
+        chat.innerHTML += `<div class="msg aksa-reply">${reply}</div>`;
+        chat.scrollTop = chat.scrollHeight;
+        playHoverSound();
+    }, 300);
+}
+
+function triggerLogoRain() {
+    for (let i = 0; i < 80; i++) {
+        setTimeout(() => {
+            const logo = document.createElement('img');
+            logo.src = 'logo.png';
+            logo.className = 'falling-logo';
+            logo.style.left = Math.random() * 100 + 'vw';
+            const size = Math.random() * 170 + 80;
+            logo.style.width = size + 'px';
+            logo.style.animationDuration = (Math.random() * 1.5 + 1) + 's';
+            logo.style.opacity = Math.random() * 0.5 + 0.5;
+            document.body.appendChild(logo);
+            setTimeout(() => logo.remove(), 3000);
+        }, i * 40);
+    }
+}
+
+// FORCE INITIALIZE
+document.addEventListener('DOMContentLoaded', () => {
+    const bootBtn = document.getElementById("bootBtn");
+    const intro = document.getElementById("dixlabsIntro");
+
+    bootBtn.onclick = function() {
+        intro.style.opacity = "0";
+        setTimeout(() => {
+            intro.style.display = "none";
+            document.getElementById("aksa-window").style.display = "flex";
+            initAudio();
+            typeWriter();
+        }, 500);
+    };
+});
+
+function typeWriter(){
+    const el=document.getElementById("subHeader");
+    const txt="> EXPERIMENTAL_PLAYGROUND // GAMES // FOCUS // FACTS";
+    let i=0; el.innerHTML="";
+    function type(){
+        if(i<txt.length){ el.innerHTML+=txt.charAt(i); i++; setTimeout(type,40); }
+    }
+    type();
+}
+
+function filterSelection(cat,el){
+    const cards=document.querySelectorAll(".card");
+    const tabs=document.querySelectorAll(".tab-link");
+    tabs.forEach(t=>t.classList.remove("active"));
+    el.classList.add("active");
+    cards.forEach(c=>{
+        if(cat==='all') c.classList.remove("hidden");
+        else c.classList.contains("category-"+cat) ? c.classList.remove("hidden") : c.classList.add("hidden");
+    });
+}
+</script>
+
+</body>
+</html>
