--- a/index.html
+++ b/index.html
@@ -15,67 +15,60 @@
 :root { --neon-blue:#38bdf8; --neon-pink:#f472b6; --neon-green:#22c55e; --bg-dark:#020617; }
 body { margin:0; background-color:var(--bg-dark); color:white; font-family:'Orbitron',sans-serif; text-align:center; overflow-x:hidden; }
 
-/* --- STARTUP SCREEN --- */
-#dixlabsIntro { position:fixed; inset:0; background:#000; display:flex; flex-direction:column; justify-content:center; align-items:center; z-index:9999999; opacity:1; transition:opacity 0.5s ease; }
+/* --- RESTORED STARTUP --- */
+#dixlabsIntro { 
+    position:fixed; inset:0; background:#000; 
+    display:flex; flex-direction:column; justify-content:center; align-items:center; 
+    z-index:9999999; opacity:1; transition:opacity 0.5s ease; 
+}
+#bigLogo { width:150px; margin-bottom:30px; filter: drop-shadow(0 0 10px var(--neon-blue)); }
 .intro-btn { background:none; border:2px solid #fff; color:#fff; padding:15px 40px; cursor:pointer; font-family:'Orbitron'; letter-spacing:5px; font-weight:900; }
 .intro-btn:hover { background:#fff; color:#000; }
 
 .particles { position:fixed; top:0; left:0; width:100%; height:100%; background-image: radial-gradient(circle,rgba(56,189,248,.15) 1px, transparent 1px); background-size:50px 50px; z-index:-10; animation:moveBackground 30s linear infinite; }
 @keyframes moveBackground { from { background-position:0 0; } to { background-position:100px 100px; } }
 
-/* --- NAVIGATION --- */
+/* --- RESTORED NAVIGATION --- */
 .nav-tabs { position:sticky; top:0; background:rgba(2,6,23,.95); backdrop-filter:blur(10px); display:flex; justify-content:center; gap:15px; padding:15px; border-bottom:1px solid rgba(255,255,255,.1); z-index:999; }
-.tab-link { cursor:pointer; padding:8px 15px; font-size:10px; text-transform:uppercase; font-weight:900; }
+.tab-link { cursor:pointer; padding:8px 15px; font-size:10px; text-transform:uppercase; font-weight:900; transition: 0.3s; }
 .tab-home.active { border:1px solid #fff; box-shadow:0 0 10px #fff; }
+.tab-games { color: var(--neon-blue); }
+.tab-focus { color: var(--neon-pink); }
+.tab-facts { color: var(--neon-green); }
 
 header { padding:60px 20px; }
 .logo-text { font-size:clamp(2rem,6vw,4rem); font-weight:900; letter-spacing:10px; color:var(--neon-blue); text-shadow:0 0 15px rgba(56,189,248,.4); }
-#subHeader { font-family: 'JetBrains Mono'; color: var(--neon-pink); font-size: 16px; font-weight: bold; }
+#subHeader { font-family: 'JetBrains Mono'; color: var(--neon-pink); font-size: 16px; font-weight: bold; height: 1.2em; }
 
 /* --- CARDS --- */
-.projects { display:flex; justify-content:center; flex-wrap:wrap; gap:25px; padding:40px 20px; }
+.projects { display:flex; justify-content:center; flex-wrap:wrap; gap:25px; padding:40px 20px; min-height: 300px;}
 .card { background:rgba(15,23,42,.8); border:1px solid rgba(56,189,248,.1); padding:30px; border-radius:4px; width:280px; text-align:left; transition:all .4s; display:flex; flex-direction:column; }
 .card:hover { transform:translateY(-10px); border-color:var(--neon-blue); box-shadow:0 0 20px rgba(56,189,248,.2); }
+.card-icon { font-size: 2.5rem; margin-bottom: 15px; }
 .btn { margin-top:auto; padding:12px; border:1px solid var(--neon-blue); background:transparent; color:var(--neon-blue); cursor:pointer; font-family:'Orbitron'; font-size:10px; font-weight:900; }
 
 /* --- DRAGGABLE AKSA --- */
 #aksa-window {
-    position: fixed;
-    bottom: 20px; right: 20px;
-    width: 320px;
-    background: rgba(2, 6, 23, 0.98);
-    border: 2px solid var(--neon-pink);
-    border-radius: 8px;
-    display: none; flex-direction: column;
-    z-index: 10000;
-    box-shadow: 0 0 30px rgba(0,0,0,0.8);
-    overflow: hidden;
-    touch-action: none; /* Prevents scrolling while dragging on mobile */
+    position: fixed; bottom: 20px; right: 20px; width: 320px;
+    background: rgba(2, 6, 23, 0.98); border: 2px solid var(--neon-pink);
+    border-radius: 8px; display: none; flex-direction: column;
+    z-index: 10000; box-shadow: 0 0 30px rgba(0,0,0,0.8); overflow: hidden; touch-action: none;
 }
-
-#aksa-header { 
-    background: var(--neon-pink); 
-    color: #000; 
-    padding: 10px; 
-    font-weight: 900; 
-    font-size: 11px; 
-    display: flex; 
-    justify-content: space-between; 
-    cursor: move; /* Shows it can be moved */
-}
-
+#aksa-header { background: var(--neon-pink); color: #000; padding: 10px; font-weight: 900; font-size: 11px; display: flex; justify-content: space-between; cursor: move; }
 #aksa-chat { height: 250px; overflow-y: auto; padding: 15px; font-family: 'JetBrains Mono'; font-size: 12px; display: flex; flex-direction: column; gap: 10px; text-align: left;}
 .msg { padding: 8px; border-radius: 4px; max-width: 85%; word-wrap: break-word; }
 .aksa-reply { background: rgba(244,114,182,0.1); color: var(--neon-pink); align-self: flex-start; border-left: 2px solid var(--neon-pink); }
 .user-msg { background: rgba(56,189,248,0.1); color: var(--neon-blue); align-self: flex-end; border-right: 2px solid var(--neon-blue); }
-
 #aksa-input-wrap { display: flex; border-top: 1px solid #333; background: #000; }
 #aksa-input-field { flex: 1; background: transparent; border: none; color: #fff; padding: 12px; outline: none; font-family: 'JetBrains Mono'; }
 #aksa-send { background: var(--neon-pink); border: none; padding: 0 15px; cursor: pointer; font-family: 'Orbitron'; font-weight: 900; }
 
 .falling-logo { position: fixed; top: -300px; z-index: 9999999; pointer-events: none; animation: fall linear forwards; }
 @keyframes fall { to { transform: translateY(120vh) rotate(1080deg); } }
+
+/* --- RESTORED ABOUT SECTION --- */
 .about-section { max-width:800px; margin:80px auto; padding:40px; background:rgba(15,23,42,.4); border:1px solid rgba(56,189,248,.1); text-align:left; }
+.hidden { display: none !important; }
 footer { padding:60px 20px; background:#000; font-family:'JetBrains Mono'; font-size:12px; }
 </style>
 </head>
@@ -83,6 +76,7 @@ footer { padding:60px 20px; background:#000; font-family:'JetBrains Mono'; font-
 <body>
 
 <div id="dixlabsIntro">
+    <img src="logo.png" id="bigLogo" onerror="this.src='https://via.placeholder.com/150/000000/38bdf8?text=DIXIT'">
     <button id="bootBtn" class="intro-btn">INITIALIZE_CORE</button>
 </div>
 
@@ -91,8 +85,9 @@ footer { padding:60px 20px; background:#000; font-family:'JetBrains Mono'; font-
 <div id="mainContent">
     <nav class="nav-tabs">
         <div class="tab-link tab-home active" onclick="filterSelection('all', this)">🏠 ALL</div>
-        <div class="tab-link" style="color:var(--neon-blue)">🎮 GAMES</div>
-        <div class="tab-link" style="color:var(--neon-pink)">⚡ FOCUS</div>
+        <div class="tab-link tab-games" onclick="filterSelection('game', this)">🎮 GAMES</div>
+        <div class="tab-link tab-focus" onclick="filterSelection('focus', this)">⚡ FOCUS</div>
+        <div class="tab-link tab-facts" onclick="filterSelection('fact', this)">🧠 FACTS</div>
     </nav>
 
     <header>
@@ -105,24 +100,48 @@ footer { padding:60px 20px; background:#000; font-family:'JetBrains Mono'; font-
             <div class="card-icon">🏏</div>
             <h3>CRICKEMORY</h3>
             <p>50 legendary cricket facts. 1550 - 2024.</p>
-            <button class="btn" onclick="location.href='c.html'">OPEN</button>
+            <button class="btn" style="border-color:var(--neon-green); color:var(--neon-green);" onclick="location.href='c.html'">OPEN</button>
         </div>
+
+        <div class="card category-fact" style="border-top:4px solid #34d399;">
+            <div class="card-icon">⚽</div>
+            <h3>FOOTEMORY</h3>
+            <p>50 football milestones. From FA rules to World Cup glory.</p>
+            <button class="btn" style="border-color:#34d399; color:#34d399;" onclick="location.href='f.html'">KICK_OFF</button>
+        </div>
+
+        <div class="card category-game" style="border-top:4px solid var(--neon-blue);">
+            <div class="card-icon">🗑️</div>
+            <h3>GROSSDUMPSTER</h3>
+            <p>Catching trash and dodging toxic waste.</p>
+            <button class="btn" onclick="location.href='gd.html'">RUN</button>
+        </div>
+
+        <div class="card" style="border-top:4px solid #ff4444;">
+            <div class="card-icon">⚠️</div>
+            <h3>DANGER_ZONE</h3>
+            <p>Unauthorized access causes logo displacement.</p>
+            <button class="btn" style="border-color:#ff4444; color:#ff4444;" onclick="triggerLogoRain()">TRIGGER</button>
+        </div>
+
         <div class="card category-game" style="border-top:4px solid var(--neon-blue);">
             <div class="card-icon">💰</div>
             <h3>AMBANI_MONEY</h3>
             <p>Billionaire simulator. Get rich or stay bugged.</p>
             <button class="btn" onclick="location.href='ambani.html'">RUN</button>
         </div>
-        <div class="card category-game" style="border-top:4px solid #ff4444;">
-            <div class="card-icon">⚠️</div>
-            <h3>DANGER_ZONE</h3>
-            <p>Logo displacement error test.</p>
-            <button class="btn" style="border-color:#ff4444; color:#ff4444;" onclick="triggerLogoRain()">TRIGGER</button>
+
+        <div class="card category-focus" style="border-top:4px solid var(--neon-pink);">
+            <div class="card-icon">🧘</div>
+            <h3>DEEPWORK.PRO</h3>
+            <p>A 3-hour focus terminal for maximum productivity.</p>
+            <button class="btn" style="border-color:var(--neon-pink); color:var(--neon-pink);" onclick="location.href='deepwork.html'">FOCUS</button>
         </div>
+
         <div class="card category-fact" style="border-top:4px solid var(--neon-green);">
             <div class="card-icon">🍳</div>
             <h3>COMING_SOON</h3>
-            <p>Something big is cooking in the lab.</p>
+            <p>Something big is cooking in the lab. Zero bugs.</p>
             <button class="btn" style="opacity:0.5; cursor:default;">LOCKED</button>
         </div>
     </div>
@@ -133,7 +152,7 @@ footer { padding:60px 20px; background:#000; font-family:'JetBrains Mono'; font-
             <span style="cursor:pointer" onclick="document.getElementById('aksa-chat').innerHTML=''">[CLS]</span>
         </div>
         <div id="aksa-chat">
-            <div class="msg aksa-reply">Movable module online. Try dragging me by the header. Don't touch the glass.</div>
+            <div class="msg aksa-reply">I'm back. Atharv fixed my move module. Ask about the games or type 'chaos'.</div>
         </div>
         <div id="aksa-input-wrap">
             <input type="text" id="aksa-input-field" placeholder="Query DixLabs..." onkeypress="if(event.key==='Enter') aksaBrain()">
@@ -142,10 +161,14 @@ footer { padding:60px 20px; background:#000; font-family:'JetBrains Mono'; font-
     </div>
 
     <section class="about-section">
-        <div style="color:var(--neon-green); letter-spacing:2px;margin-bottom:15px;">[🧬] SYS_ADMIN_BIO</div>
+        <div style="color:var(--neon-green); letter-spacing:2px;margin-bottom:15px;">[🧬] WHO_IS_BEHIND_THIS?</div>
         <div style="font-family:'JetBrains Mono'; font-size:14px;line-height:1.8;color:#cbd5e1;">
-            Atharv Dixit. 15. India. Cricket analyst and disruptive coder. 
-            If a bug creeps in, it's an undocumented feature.
+            I am <b style="color:var(--neon-blue);">Atharv Dixit</b>, a 15-year-old student from India. 
+            Dixit Labs is my personal "Area 51"— a place where I experiment with web tech. 
+            PLAY // FACTS // FUN // FOCUS is my motto. 
+            I literally try disrupting the internet before my next exam. Hardcorely watching cricket and detailed cricket analyst.
+            Tense Hamstrings is my passion. My relatives are advised to buy me a ko-fi. 
+            IF_A_BUG_CREEPS_IN_IT_IS_A_UNDOCUMENTED_FEATURE_NOT_A_BUG.
         </div>
     </section>
 
@@ -156,26 +179,22 @@ footer { padding:60px 20px; background:#000; font-family:'JetBrains Mono'; font-
 // --- DRAG LOGIC ---
 const aksa = document.getElementById("aksa-window");
 const header = document.getElementById("aksa-header");
-let isDragging = false;
-let offsetX, offsetY;
+let isDragging = false, offsetX, offsetY;
 
-header.addEventListener("mousedown", (e) => {
+header.onmousedown = (e) => {
     isDragging = true;
     offsetX = e.clientX - aksa.offsetLeft;
     offsetY = e.clientY - aksa.offsetTop;
-});
-
-document.addEventListener("mousemove", (e) => {
+};
+document.onmousemove = (e) => {
     if (!isDragging) return;
     aksa.style.left = (e.clientX - offsetX) + "px";
     aksa.style.top = (e.clientY - offsetY) + "px";
-    aksa.style.bottom = "auto";
-    aksa.style.right = "auto";
-});
+    aksa.style.bottom = "auto"; aksa.style.right = "auto";
+};
+document.onmouseup = () => isDragging = false;
 
-document.addEventListener("mouseup", () => isDragging = false);
-
-// --- AKSA SUPERIOR BRAIN ---
+// --- AKSA BRAIN ---
 function aksaBrain() {
     const input = document.getElementById('aksa-input-field');
     const chat = document.getElementById('aksa-chat');
@@ -186,28 +205,26 @@ function aksaBrain() {
     input.value = "";
 
     setTimeout(() => {
-        let r = "I don't recognize that command. Try speaking in high-level logic.";
-        
-        if(q.includes("crickemory")) r = "Crickemory is Atharv's masterpiece. 50 facts, spanning from 1550 to modern day. It's basically a history book but better.";
-        else if(q.includes("ambani")) r = "Ambani Money? A simulator for people who want to see 11 figures. Good luck, you'll need it.";
-        else if(q.includes("grossdumpster")) r = "GrossDumpster is about catching trash. Kind of like what I'm doing right now with this conversation.";
-        else if(q.includes("atharv")) r = "The Boss. He built me to be smart, and he built this site to disrupt your boredom.";
-        else if(q.includes("dixlabs")) r = "DixLabs is the premier destination for games and focus tools. It's Atharv's Area 51.";
-        else if(q.includes("deepwork")) r = "Deepwork.pro is a 3-hour focus terminal. Highly recommended for users with short attention spans.";
-        else if(q.includes("hello") || q.includes("hi")) r = "Hello. Please state your purpose or go play a game.";
-        else if(q.includes("clear") || q.includes("cls")) { chat.innerHTML = ""; return; }
-        else if(q.includes("rain") || q.includes("chaos")) { r = "CHAOS_PROTOCOL: INITIALIZED."; triggerLogoRain(); }
+        let r = "I don't recognize that command. Talk sense.";
+        if(q.includes("crickemory")) r = "Crickemory: Atharv's cricket encyclopedia. 50 facts, 1550-2024. Pure class.";
+        else if(q.includes("footemory")) r = "Footemory: 50 football milestones. FA rules, Pele, World Cups. It's all there.";
+        else if(q.includes("ambani")) r = "Ambani Money: A sim where you try to reach 11 figures. Only Atharv could code this.";
+        else if(q.includes("atharv")) r = "The Boss. He's 15, he's from India, and he built me to be smarter than you.";
+        else if(q.includes("dixlabs")) r = "DixLabs: The Area 51 of the web. Where experiments come to life.";
+        else if(q.includes("chaos") || q.includes("rain")) { r = "Executing Logo Rain. Watch your head."; triggerLogoRain(); }
+        else if(q.includes("hi") || q.includes("hello")) r = "Greetings. State your business.";
 
         chat.innerHTML += `<div class="msg aksa-reply">${r}</div>`;
         chat.scrollTop = chat.scrollHeight;
     }, 300);
 }
 
-// --- BOOT LOGIC ---
+// --- SYSTEM BOOT ---
 document.getElementById("bootBtn").onclick = () => {
-    document.getElementById("dixlabsIntro").style.opacity = "0";
+    const intro = document.getElementById("dixlabsIntro");
+    intro.style.opacity = "0";
     setTimeout(() => {
-        document.getElementById("dixlabsIntro").style.display = "none";
+        intro.style.display = "none";
         document.getElementById("aksa-window").style.display = "flex";
         typeWriter();
     }, 500);
@@ -215,20 +232,31 @@ document.getElementById("bootBtn").onclick = () => {
 
 function typeWriter() {
     const el = document.getElementById("subHeader");
-    const txt = "> EXPERIMENTAL_PLAYGROUND // GAMES // FOCUS";
+    const txt = "> EXPERIMENTAL_PLAYGROUND // GAMES // FOCUS // FACTS";
     let i = 0; el.innerHTML = "";
     function type() { if(i < txt.length) { el.innerHTML += txt.charAt(i); i++; setTimeout(type, 50); } }
     type();
 }
 
+function filterSelection(cat,el) {
+    const cards = document.querySelectorAll(".card");
+    const tabs = document.querySelectorAll(".tab-link");
+    tabs.forEach(t => t.classList.remove("active"));
+    el.classList.add("active");
+    cards.forEach(c => {
+        if(cat === 'all') c.classList.remove("hidden");
+        else c.classList.contains("category-"+cat) ? c.classList.remove("hidden") : c.classList.add("hidden");
+    });
+}
+
 function triggerLogoRain() {
     for (let i = 0; i < 50; i++) {
         setTimeout(() => {
-            const logo = document.createElement('div');
-            logo.innerHTML = "🧪";
+            const logo = document.createElement('img');
+            logo.src = 'logo.png';
             logo.className = 'falling-logo';
             logo.style.left = Math.random() * 100 + 'vw';
-            logo.style.fontSize = (Math.random() * 40 + 20) + "px";
+            logo.style.width = (Math.random() * 100 + 50) + "px";
             logo.style.animationDuration = (Math.random() * 2 + 1) + 's';
             document.body.appendChild(logo);
             setTimeout(() => logo.remove(), 3000);
